--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -84,7 +84,8 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\OctopusPrime\Documents\GitHub\ReBoot\glew-1.9.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\OctopusPrime\Documents\GitHub\ReBoot\glew-1.9.0\lib\x64;C:\Users\OctopusPrime\Documents\GitHub\ReBoot\glut-3.7.6\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -118,17 +119,20 @@
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="SimpleContext.cpp" />
     <ClCompile Include="StateVector.cpp" />
     <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="ViewManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="glew.h" />
     <ClInclude Include="GLIncludes.h" />
+    <ClInclude Include="SimpleContext.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="SimpleContext.h" />
     <ClInclude Include="StateVector.h" />
+    <ClInclude Include="UpdateInterface.h" />
     <ClInclude Include="Vector4.h" />
     <ClInclude Include="ViewManager.h" />
   </ItemGroup>
