--- a/ReBoot.vcxproj.filters
+++ b/ReBoot.vcxproj.filters
@@ -72,4 +72,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="simpleShader.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="simpleShader.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
