View Matrix Controller
Added the capability to broadcast view matrix changes to each model in a
simulation.

--- a/ReBoot.vcxproj.filters
+++ b/ReBoot.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="SimpleContext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UpdateInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
