--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -82,6 +82,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Users\OctopusPrime\Documents\GitHub\PhysicsEngineBuild\APIs\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -122,6 +123,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SimpleContext.cpp" />
     <ClCompile Include="StateVector.cpp" />
+    <ClCompile Include="UpdateInterface.cpp" />
     <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="ViewManager.cpp" />
   </ItemGroup>
