Directional Lighting, Code Organization, Debug Shader, etc.
Many changes...
-Added directional lighting which involves computing the normal matrix
which is the inverse transpose of the view matrix.
-Consolidated architecture by making the SceneManager contain a
ViewManager which contains the SimpleContext.  SceneManager also
contains a ModelFactory which acts as a singleton that generates models.
Models contain shaders and these shaders operate on a model object when
running the shader.  Streamlined event update management.
-Adding a debug shader for visualizing normals.  This helped with
proving the normals were accurate and transformed correctly by the
normal matrix.
-Added a new design picture of how everything fits where.

--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -117,6 +117,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DebugShader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Model.cpp" />
@@ -133,6 +134,7 @@
     <ClCompile Include="ViewManagerEvents.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DebugShader.h" />
     <ClInclude Include="GLIncludes.h" />
     <ClInclude Include="ModelFactory.h" />
     <ClInclude Include="SceneManager.h" />
@@ -149,6 +151,8 @@
     <ClInclude Include="ViewManagerEvents.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="normalShader.frag" />
+    <None Include="normalShader.vert" />
     <None Include="simpleShader.frag" />
     <None Include="simpleShader.vert" />
   </ItemGroup>
