MasterClock and VBO double buffering
Added a master clock that sends time events to subscribers.  A time
event could include frame rate or physical kinematics calculation
updates.  All models including animated models have vbo double
buffering.  For animated models that frequently need to change vbo data,
a second vbo context is used to send up new vbo buffer data while the
other buffer is being used for drawing.

--- a/ReBoot.vcxproj.filters
+++ b/ReBoot.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="AnimationFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MasterClock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -144,6 +147,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AnimationFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MasterClock.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
