--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="DebugShader.cpp" />
     <ClCompile Include="FbxLoader.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MasterClock.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelFactory.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="DebugShader.h" />
     <ClInclude Include="FbxLoader.h" />
     <ClInclude Include="GLIncludes.h" />
+    <ClInclude Include="MasterClock.h" />
     <ClInclude Include="ModelFactory.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ShadowShader.h" />
