Models have Textures
Add primitive texture handling by adding the capability to parse many
different types of image files to be used for texture data.  In addition
to texture data, there needed to be texture coordinate data added to the
Model class that maps certain parts of a texture to a vertex.

--- a/ReBoot.vcxproj.filters
+++ b/ReBoot.vcxproj.filters
@@ -81,6 +81,15 @@
     <ClCompile Include="MasterClock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureBroker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -150,6 +159,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MasterClock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureBroker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
