--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -82,11 +82,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\fbx-sdk\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\fbx-sdk\include;..\freeimage\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\glew-1.9.0\lib\x64;..\glut-3.7.6\lib\x64;..\fbx-sdk\lib\debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\glew-1.9.0\lib\x64;..\glut-3.7.6\lib\x64;..\fbx-sdk\lib\debug;..\freeimage\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -110,13 +110,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\fbx-sdk\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\fbx-sdk\include;..\freeimage\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\glew-1.9.0\lib\x64;..\glut-3.7.6\lib\x64;..\fbx-sdk\lib\release;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\glew-1.9.0\lib\x64;..\glut-3.7.6\lib\x64;..\fbx-sdk\lib\release;..\freeimage\lib</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -139,6 +139,9 @@
     <ClCompile Include="SimpleContextEvents.cpp" />
     <ClCompile Include="SkinningData.cpp" />
     <ClCompile Include="StateVector.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Texture2.cpp" />
+    <ClCompile Include="TextureBroker.cpp" />
     <ClCompile Include="UpdateInterface.cpp" />
     <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="ViewManager.cpp" />
@@ -163,6 +166,9 @@
     <ClInclude Include="SimpleContextEvents.h" />
     <ClInclude Include="SkinningData.h" />
     <ClInclude Include="StateVector.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Texture2.h" />
+    <ClInclude Include="TextureBroker.h" />
     <ClInclude Include="UpdateInterface.h" />
     <ClInclude Include="Vector4.h" />
     <ClInclude Include="ViewManager.h" />
