GPU-side animation computing
1. Original animation computing was processed on the CPU side and has
now been converted to be processed on the GPU using weights and indexes
as attributes and bone matrices as a uniform matrix array.  The bone
matrices change every animation frame while the indexes are used to
index into the bone that affects each vertex which is accompanied with a
scalar weight.  As of now there can only be up to four bone matrices
that can affect one vertex so the index and weight attributes add 8
floats to each vertex shader.
2.  Texture broker is now a static texture manager that lives in the
model class which allows reuse of textures that are already loaded to
gpu texture memory.  Just pass around texture contexts to models.
3.  Removed double buffering because the GPU-side animation computations
now allow up to 600 animated entities running at 120 fps.  The original
CPU-side computations allowed up to 100 animated entities running at 60
fps with many optimizations in place.  This is a huge speed
improvement!!!!!!!!!!!!!!!!!!!!!!!!

--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -124,7 +124,6 @@
     <ClCompile Include="AnimatedModel.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimationBuilder.cpp" />
-    <ClCompile Include="AnimationFrame.cpp" />
     <ClCompile Include="DebugShader.cpp" />
     <ClCompile Include="FbxLoader.cpp" />
     <ClCompile Include="main.cpp" />
@@ -134,7 +133,7 @@
     <ClCompile Include="ModelFactory.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="ShadowShader.cpp" />
+    <ClCompile Include="AnimationShader.cpp" />
     <ClCompile Include="SimpleContext.cpp" />
     <ClCompile Include="SimpleContextEvents.cpp" />
     <ClCompile Include="SkinningData.cpp" />
@@ -151,14 +150,13 @@
     <ClInclude Include="AnimatedModel.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimationBuilder.h" />
-    <ClInclude Include="AnimationFrame.h" />
     <ClInclude Include="DebugShader.h" />
     <ClInclude Include="FbxLoader.h" />
     <ClInclude Include="GLIncludes.h" />
     <ClInclude Include="MasterClock.h" />
     <ClInclude Include="ModelFactory.h" />
     <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="ShadowShader.h" />
+    <ClInclude Include="AnimationShader.h" />
     <ClInclude Include="SimpleContext.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Model.h" />
@@ -175,10 +173,14 @@
     <ClInclude Include="ViewManagerEvents.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="normalShader.frag" />
-    <None Include="normalShader.vert" />
-    <None Include="simpleShader.frag" />
-    <None Include="simpleShader.vert" />
+    <None Include="shaders\hagravenBoneShader.frag" />
+    <None Include="shaders\hagravenBoneShader.vert" />
+    <None Include="shaders\normalShader.frag" />
+    <None Include="shaders\normalShader.vert" />
+    <None Include="shaders\simpleShader.frag" />
+    <None Include="shaders\simpleShader.vert" />
+    <None Include="shaders\trollBoneShader.frag" />
+    <None Include="shaders\trollBoneShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
