Multi-texture models
Implemented the capability to have multiple textures used in one model.
The idea is that all of the vertex, normal and texture UV data is each a
single large buffer regardless of texture changes.  Meta data is stored
notifying the shader to switch textures based on vertex stride
information.  The shader program does not need to be restarted every
texture change, the shader manager only needs to change the active
texture and the starting index in the attribute buffer along with a
length...very nice!

--- a/ReBoot.vcxproj
+++ b/ReBoot.vcxproj
@@ -83,6 +83,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\fbx-sdk\include;..\freeimage\include;</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <AdditionalDependencies>FreeImage.lib;libfbxsdk-md.lib;glew32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -111,6 +112,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>..\fbx-sdk\include;..\freeimage\include</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
